--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ hasCJKLanguage = true
 
 
 # ----- feel free change these settings, those are not tied to this theme --
-paginate = 5
+paginate = 7
 enableEmoji = true
 
 # to have better preview
@@ -42,7 +42,7 @@ googleAnalytics = "your ga id"
     # set true need to use custom js
     useCustomSyntaxHighlight = false
     customJs = []
-    customCss = []
+    customCss = ["kfc.css"]
     mode = "light"
 # menubar setting, you can change url, weight and name except the 'Theme'.
 [[menu.main]]
@@ -53,6 +53,10 @@ googleAnalytics = "your ga id"
     name = "View"
     url = "#"
     weight = 10
+[[menu.main]]
+    name = "About"
+    url = "/"
+    weight = 11
 # You can change the name, but please don't edit the identifier
 [[menu.main]]
     parent = "View"
