--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ paginate = 7
 enableEmoji = true
 
 # to have better preview
-buildDrafts = "true"
+buildDrafts = "false"
 # helpful if you want to edit the site or theme code
 disableFastRender = true
 # --------------------------------------------------------------------------
